@@ -14,6 +14,10 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Modify loading imagery from GDAL to load all bands at once to avoid multiple
+  passes through pixel interleaved data (mapdrawgdal.c).  This is just an
+  optimization - there should be no change in results or features.
+
 - Modern GDALs clear the config when destroying driver manager.  Skip this
   call to avoid TLS leakage on cleanup (mapgdal.c).
 
